added new changes

--- a/curriculumvitae/public/index.html
+++ b/curriculumvitae/public/index.html
@@ -27,6 +27,7 @@
     <title>Curriculum vitae</title>
   </head>
   <body>
+    <noscript>This can only be accessed with javascript</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
